--- a/vega.config
+++ b/vega.config
@@ -6,7 +6,8 @@
 
 cd `dirname $0` && source ./Configuration
 
-setenv MAPPINGDATAFILE	/mgi/all/wts_projects/7600/7655/DataLoad
+setenv MAPPINGDATADIR   /mgi/all/wts_projects/7600/7655/DataLoad
+setenv MAPPINGDATAFILE  ${MAPPINGDATADIR}
 setenv MAPPINGMODE	preview|incremental|full
 setenv JNUM		J:81858
 setenv EXPERIMENTTYPE	"TEXT-Physical Mapping"
